--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,57 +1,51 @@
 app:
-  # 已帮你替换为你现在的 GitHub Pages 地址
+  # GitHub Pages 地址
   base_url: "https://inachen1996-hue.github.io/TrendRadar"
   version_check_url: "https://raw.githubusercontent.com/sansan0/TrendRadar/refs/heads/master/version"
-  show_version_update: true # 控制显示版本更新提示，改成 false 将不接受新版本提示
+  show_version_update: false # 关闭版本更新提示，保持清爽
 
 crawler:
-  request_interval: 1000 # 请求间隔(毫秒)
-  enable_crawler: true # 是否启用爬取新闻功能，false 时直接停止程序
-  use_proxy: false # 是否启用代理，false 时为关闭
+  # ⚠️ 关键修改：抖音反爬较严，请求间隔改为 3000毫秒 (3秒) 比较安全，太快会被封IP
+  request_interval: 3000 
+  enable_crawler: true 
+  use_proxy: false 
   default_proxy: "http://127.0.0.1:10086"
 
-# 🔸 daily（当日汇总模式）：日报总结
-# 🔸 current（当前榜单模式）：实时热点追踪
-# 🔸 incremental（增量监控模式）：有新增才推送（推荐追热点用）
-
 report:
-  mode: "incremental" # 已帮你改为增量模式，有新瓜才推送，不重复打扰
-  rank_threshold: 5 # 排名高亮阈值
+  # ⚠️ 关键修改：incremental (增量模式)
+  # 只有当某个“宠物”关键词是“新上榜”的，或者排名上升了，才会推送给你
+  mode: "incremental" 
+  rank_threshold: 5
 
 notification:
-  enable_notification: true # 是否启用通知功能，false 时不发送手机通知
-  message_batch_size: 4000 # 消息分批大小（字节）(这个配置别动)
-  batch_send_interval: 1 # 批次发送间隔（秒）
-  feishu_message_separator: "━━━━━━━━━━━━━━━━━━━" # feishu 消息分割线
+  enable_notification: true # 开启通知
+  message_batch_size: 4000
+  batch_send_interval: 1
+  feishu_message_separator: "━━━━━━━━━━━━━━━━━━━"
 
+  # 静默推送已关闭，这意味着只要有新热点，就会立刻尝试推送（取决于GitHub Actions的运行时间）
   silent_push:
-    enabled: false  # 是否启用静默推送模式，如果 true，则启用
-    # 因为我们白嫖的 github 服务器执行时间不稳定，所以时间范围要根据实际尽可能大一点，留足 2 小时
-    # 如果你想寻求稳定的按时的推送，建议部署在个人的服务器上
+    enabled: false  
     time_range:
-      start: "20:00"  # 推送时间范围开始（北京时间）
-      end: "22:00"    # 推送时间范围结束（北京时间）
-    once_per_day: true  # 每天在时间范围内只推送一次，如果 false，则时间范围内每次执行都推送一次
-    push_record_retention_days: 7  # 推送记录保留天数
+      start: "08:00"
+      end: "22:00"
+    once_per_day: true
+    push_record_retention_days: 7
 
-  # 请务必妥善保管好 webhooks，不要公开
-  # 如果你以 fork 的方式将本项目部署在 GitHub 上，请勿在此填写任何 webhooks，而是将 webhooks 填入 GitHub Secret
-  # 不然轻则手机上收到奇怪的广告推送，重则存在一定的安全隐患
+  # 请在此处填入你的 Webhook 地址（如果使用 GitHub Secret 则留空）
   webhooks:
-    feishu_url: "" # 飞书机器人的 webhook URL
-    dingtalk_url: "" # 钉钉机器人的 webhook URL
-    wework_url: "" # 企业微信机器人的 webhook URL
-    telegram_bot_token: "" # Telegram Bot Token
-    telegram_chat_id: "" # Telegram Chat ID
+    feishu_url: "" 
+    dingtalk_url: ""
+    wework_url: ""
+    telegram_bot_token: ""
+    telegram_chat_id: ""
 
-# 用于让关注度更高的新闻在更前面显示，合起来是 1 就行
 weight:
-  rank_weight: 0.6 # 排名权重
-  frequency_weight: 0.3 # 频次权重
-  hotness_weight: 0.1 # 热度权重
+  rank_weight: 0.6
+  frequency_weight: 0.3
+  hotness_weight: 0.1
 
-# 增加无聊的小知识
-# 这里的 name 你可以定义任意名称，只具有显示作用，不会影响数据的处理
+# ⚠️ 关键修改：只保留抖音，专注单一平台
 platforms:
   - id: "douyin"
     name: "抖音"
